--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,13 +1,11 @@
 name: tests
 
-on: 
-  pull_request
-  
+on: pull_request
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
       - run: cd act && npm install & npm run test:ci
-      
-        
