--- a/auth/package.json
+++ b/auth/package.json
@@ -31,14 +31,15 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.19",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.1.4",
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.3",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1"
+  },
+  "devDependencies": {
+    
   }
 }
