--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: cd act && npm install
-      - run: npm run test:ci
+      - run: npm run test:ci --verbose
