--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,5 +8,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: cd act && npm install
-      - run: npm run test:ci --verbose
+      - run: cd act && npm install && npm run test:ci --verbose
