--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: cd act && npm install && npm run test:ci --verbose
+      - run: cd auth && npm install && npm run test:ci --verbose
